# AndroidTermProject

Android/: .gitignore  build.gradle.kts  settings.gradle.kts
Android/app/: build.gradle.kts  env.example
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/res/drawable/: bg_day_default.xml  bg_day_negative.xml  bg_day_positive.xml  bg_input_card.xml  bg_main_card.xml  bg_main_card2.xml  ic_arrow_back.xml  ic_calendar.xml  ic_cloud_sync.xml  ic_download.xml  ic_emotion_card.xml  ic_gallery.xml  ic_json_download.xml  ic_left.xml  ic_plus.xml  ic_right.xml  ic_settings.xml  ic_sound.xml
Android/app/src/main/res/layout/: activity_advice.xml  activity_detail.xml  (+5 more)
Android/gradle/: libs.versions.toml
Android/gradle/wrapper/: gradle-wrapper.properties
BE/: .env  .gitignore  .python-version  Dockerfile.app  Dockerfile.mcp  docker-compose.yml  env.template  local_server.py  main.py  mcp_logic.py  pyproject.toml  requirements.txt  sse_server.py
BE/.cursor/: mcp.json
BE/api-server/: database.py  main.py
BE/api-server/models/: diary.py
BE/api-server/routers/: diary.py
BE/api-server/schemas/: diary.py
BE/app/: __init__.py  config.py  main.py  mcp_main.py  mcp_server.py
BE/app/config/: __init__.py
BE/app/controllers/: __init__.py  dbt_diary_controller.py
BE/app/database/: __init__.py  database.py
BE/app/dtos/: diary.py
BE/app/models/: __init__.py  dbt_diary.py
BE/app/routes/: __init__.py  dbt_diary.py
BE/app/tools/: diary_tools.py
BE/document/: api_documentation.md
BE/mcp/: client.py  config.py  server.py
BE/mcp-server/: main.py
(+57 files in other folders)
